2006-01-12  Julien Puydt  <jpuydt@free.fr>

	* src/gui/statusicon.h, src/gui/statusicon.cpp: Added copyright
	notice.

2006-01-12  Julien Puydt  <jpuydt@free.fr>

	* lib/gui/gmtray/Makefile.am: Made the libgmtray noinst ;-)

2006-01-12  Julien Puydt  <jpuydt@free.fr>

	* lib/gmconf/gmconf-glib.c: More gnomemeeting -> ekiga renaming.

2006-01-12  Julien Puydt  <jpuydt@free.fr>

	* src/gui/statusicon.cpp: Added a missing #include for win32.

2006-01-12  Julien Puydt  <jpuydt@free.fr>

	* configure.in: Remove a line breaking cross-compilation.

2006-01-12  Julien Puydt  <jpuydt@free.fr>

	* lib/gmconf/gmconf-glib.c, lib/gui/esplash.c: Correct inclusion of
	winpaths.h.

2006-01-12  Julien Puydt  <jpuydt@free.fr>

	* src/gui/statusicon.cpp: Stop blinking the message icon once we have
	shown the chat window.

2006-01-12  Julien Puydt  <jpuydt@free.fr>

	* src/gui/statusicon.h, src/gui/statusicon.cpp: Actually commit the
	files in cvs... I'm such a fool. :-(

2006-01-11  Julien Puydt  <jpuydt@free.fr>

	* src/gui/statusicon.cpp: Made it show the chat window when it is
	clicked and a message is pending and the chat window isn't used.

2006-01-11  Damien Sandras  <dsandras@gnome.org>

	* ekiga.schemas.in.in: Reordered codecs.
	* src/endpoints/ekiga.cpp: Fixed #326506.
	* src/gui/callbacks.cpp src/gui/druid.cpp src/gui/tools.cpp 
	src/components/bonobo.cpp:
	Fixed more renaming issues.
	* configure.in:
	Removed now unuseful dependancies.

2006-01-11  Julien Puydt  <jpuydt@free.fr>

	* lib/eggtrayicon.h, lib/eggtrayicon.c: Removed.
	* lib/Makefile.am: Removed references to eggtrayicon.*.
	* configure.in, lib/gui/Makefile.am: Compile libgmtray.la.
	* src/gui/tray.h, src/gui/tray.cpp: Added. High level tray
	implementation.
	* src/gui/statusicon.h, src/gui/statusicon.cpp: Added. High level
	implementation of a tray.
	* src/Makefile.am: Compile statusicon.*.
	* src/gui/addressbook.cpp, src/gui/main.cpp, src/gui/config.cpp,
	src/endpoints/urlhandler.cpp, src/endpoints/ekiga.cpp,