@@ -1,5 +1,10 @@
 2006-01-12  Julien Puydt  <jpuydt@free.fr>
 
+	* lib/gui/gmtray/gmtray-x11.c, lib/gui/gmtray/gmtray-win32.c: Made the
+	icon smaller.
+
+2006-01-12  Julien Puydt  <jpuydt@free.fr>
+
 	* src/gui/statusicon.h, src/gui/statusicon.cpp: Added copyright
 	notice.
 
